// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`dashboardNavbar > renders with as correctly 1`] = `
"<div class="">
  <!---->
  <section data-slot="root">
    <div data-slot="left" class=""><button type="button" aria-label="Open sidebar" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
        <!--v-if-->
        <!--v-if-->
      </button>
      <!--v-if-->
      <h1 data-slot="title" class=""></h1>
    </div>
    <!--v-if-->
    <div data-slot="right" class="">
      <!--v-if-->
    </div>
  </section>
</div>"
`;

exports[`dashboardNavbar > renders with class correctly 1`] = `
"<div class="">
  <!---->
  <div data-slot="root" class="px-8">
    <div data-slot="left" class=""><button type="button" aria-label="Open sidebar" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
        <!--v-if-->
        <!--v-if-->
      </button>
      <!--v-if-->
      <h1 data-slot="title" class=""></h1>
    </div>
    <!--v-if-->
    <div data-slot="right" class="">
      <!--v-if-->
    </div>
  </div>
</div>"
`;

exports[`dashboardNavbar > renders with default slot correctly 1`] = `
"<div class="">
  <!---->
  <div data-slot="root">
    <div data-slot="left" class=""><button type="button" aria-label="Open sidebar" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
        <!--v-if-->
        <!--v-if-->
      </button>
      <!--v-if-->
      <h1 data-slot="title" class=""></h1>
    </div>
    <div data-slot="center" class="">Default slot</div>
    <div data-slot="right" class="">
      <!--v-if-->
    </div>
  </div>
</div>"
`;

exports[`dashboardNavbar > renders with icon correctly 1`] = `
"<div class="">
  <!---->
  <div data-slot="root">
    <div data-slot="left" class=""><button type="button" aria-label="Open sidebar" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
        <!--v-if-->
        <!--v-if-->
      </button><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="icon" class=""></svg>
      <h1 data-slot="title" class=""></h1>
    </div>
    <!--v-if-->
    <div data-slot="right" class="">
      <!--v-if-->
    </div>
  </div>
</div>"
`;

exports[`dashboardNavbar > renders with leading slot correctly 1`] = `
"<div class="">
  <!---->
  <div data-slot="root">
    <div data-slot="left" class=""><button type="button" aria-label="Open sidebar" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
        <!--v-if-->
        <!--v-if-->
      </button>Leading slot<h1 data-slot="title" class=""></h1>
    </div>
    <!--v-if-->
    <div data-slot="right" class="">
      <!--v-if-->
    </div>
  </div>
</div>"
`;

exports[`dashboardNavbar > renders with left slot correctly 1`] = `
"<div class="">
  <!---->
  <div data-slot="root">
    <div data-slot="left" class=""><button type="button" aria-label="Open sidebar" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
        <!--v-if-->
        <!--v-if-->
      </button>Left slot</div>
    <!--v-if-->
    <div data-slot="right" class="">
      <!--v-if-->
    </div>
  </div>
</div>"
`;

exports[`dashboardNavbar > renders with right slot correctly 1`] = `
"<div class="">
  <!---->
  <div data-slot="root">
    <div data-slot="left" class=""><button type="button" aria-label="Open sidebar" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
        <!--v-if-->
        <!--v-if-->
      </button>
      <!--v-if-->
      <h1 data-slot="title" class=""></h1>
    </div>
    <!--v-if-->
    <div data-slot="right" class="">Right slot
      <!--v-if-->
    </div>
  </div>
</div>"
`;

exports[`dashboardNavbar > renders with title correctly 1`] = `
"<div class="">
  <!---->
  <div data-slot="root">
    <div data-slot="left" class=""><button type="button" aria-label="Open sidebar" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
        <!--v-if-->
        <!--v-if-->
      </button>
      <!--v-if-->
      <h1 data-slot="title" class="">Dashboard</h1>
    </div>
    <!--v-if-->
    <div data-slot="right" class="">
      <!--v-if-->
    </div>
  </div>
</div>"
`;

exports[`dashboardNavbar > renders with title slot correctly 1`] = `
"<div class="">
  <!---->
  <div data-slot="root">
    <div data-slot="left" class=""><button type="button" aria-label="Open sidebar" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
        <!--v-if-->
        <!--v-if-->
      </button>
      <!--v-if-->
      <h1 data-slot="title" class="">Title slot</h1>
    </div>
    <!--v-if-->
    <div data-slot="right" class="">
      <!--v-if-->
    </div>
  </div>
</div>"
`;

exports[`dashboardNavbar > renders with toggle correctly 1`] = `
"<div class="">
  <!---->
  <div data-slot="root">
    <div data-slot="left" class=""><button type="button" aria-label="Open sidebar" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
        <!--v-if-->
        <!--v-if-->
      </button>
      <!--v-if-->
      <h1 data-slot="title" class=""></h1>
    </div>
    <!--v-if-->
    <div data-slot="right" class="">
      <!--v-if-->
    </div>
  </div>
</div>"
`;

exports[`dashboardNavbar > renders with toggle slot correctly 1`] = `
"<div class="">
  <!---->
  <div data-slot="root">
    <div data-slot="left" class="">Toggle slot
      <!--v-if-->
      <h1 data-slot="title" class=""></h1>
    </div>
    <!--v-if-->
    <div data-slot="right" class="">
      <!--v-if-->
    </div>
  </div>
</div>"
`;

exports[`dashboardNavbar > renders with toggleSide correctly 1`] = `
"<div class="">
  <!---->
  <div data-slot="root">
    <div data-slot="left" class="">
      <!--v-if-->
      <!--v-if-->
      <h1 data-slot="title" class=""></h1>
    </div>
    <!--v-if-->
    <div data-slot="right" class=""><button type="button" aria-label="Open sidebar" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
        <!--v-if-->
        <!--v-if-->
      </button></div>
  </div>
</div>"
`;

exports[`dashboardNavbar > renders with trailing slot correctly 1`] = `
"<div class="">
  <!---->
  <div data-slot="root">
    <div data-slot="left" class=""><button type="button" aria-label="Open sidebar" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
        <!--v-if-->
        <!--v-if-->
      </button>
      <!--v-if-->
      <h1 data-slot="title" class=""></h1>Trailing slot
    </div>
    <!--v-if-->
    <div data-slot="right" class="">
      <!--v-if-->
    </div>
  </div>
</div>"
`;

exports[`dashboardNavbar > renders with ui correctly 1`] = `
"<div class="">
  <!---->
  <div data-slot="root">
    <div data-slot="left" class="gap-3"><button type="button" aria-label="Open sidebar" data-slot="base" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg>
        <!--v-if-->
        <!--v-if-->
      </button>
      <!--v-if-->
      <h1 data-slot="title" class=""></h1>
    </div>
    <!--v-if-->
    <div data-slot="right" class="">
      <!--v-if-->
    </div>
  </div>
</div>"
`;

exports[`dashboardNavbar > renders without toggle correctly 1`] = `
"<div class="">
  <!---->
  <div data-slot="root">
    <div data-slot="left" class="">
      <!--v-if-->
      <!--v-if-->
      <h1 data-slot="title" class=""></h1>
    </div>
    <!--v-if-->
    <div data-slot="right" class="">
      <!--v-if-->
    </div>
  </div>
</div>"
`;
